# sdk-nrf

./: west.yml
doc/nrf/: links.txt  ug_nrf52_developing.rst  ug_thingy53.rst
doc/nrf/libraries/caf/: ble_smp.rst
doc/nrf/releases/: release-notes-changelog.rst
doc/nrf/working_with_nrf/nrf52/: developing.rst
doc/nrf/working_with_nrf/nrf53/: thingy53.rst
lib/dk_buttons_and_leds/: Kconfig
modules/mcuboot/: CMakeLists.txt
samples/bluetooth/fast_pair/input_device/: fp_provision.hex  prj.conf
samples/bluetooth/fast_pair/input_device/boards/: nrf54l15pdk_nrf54l15_cpuapp.conf  nrf54l15pdk_nrf54l15_cpuapp.overlay
samples/bluetooth/fast_pair/locator_tag/: CMakeLists.txt  Kconfig.sysbuild  dfu_speedup_netcore_fragment.conf  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf52840dk_nrf52840_release.yml  pm_static_nrf52dk_nrf52832_release.yml  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_nrf5340dk_nrf5340_cpuapp_ns_release.yml  pm_static_nrf54l15pdk_nrf54l15_cpuapp.yml  pm_static_nrf54l15pdk_nrf54l15_cpuapp_release.yml  pm_static_thingy53_nrf5340_cpuapp_ns.yml  prj.conf  prj_release.conf  sysbuild.cmake  sysbuild.conf
samples/bluetooth/fast_pair/locator_tag/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf5340dk_nrf5340_cpuapp_ns_release.conf  thingy53_nrf5340_cpuapp_ns_release.conf
samples/bluetooth/fast_pair/locator_tag/include/: app_fp_adv.h  app_smp_adv_prov.h
samples/bluetooth/fast_pair/locator_tag/src/: Kconfig.dfu  fp_adv.c  main.c  smp_adv_prov.c
samples/bluetooth/fast_pair/locator_tag/src/ui/: platform_dk.c
samples/bluetooth/fast_pair/locator_tag/sysbuild/: CMakeLists.txt
samples/bluetooth/fast_pair/locator_tag/sysbuild/configuration/nrf52833dk_nrf52833/: sysbuild.conf
samples/bluetooth/fast_pair/locator_tag/sysbuild/configuration/nrf52840dk_nrf52840/: sysbuild.conf
samples/bluetooth/fast_pair/locator_tag/sysbuild/configuration/nrf5340dk_nrf5340_cpuapp_ns/: sysbuild.conf
samples/bluetooth/fast_pair/locator_tag/sysbuild/configuration/thingy53_nrf5340_cpuapp/: sysbuild.conf
samples/bluetooth/fast_pair/locator_tag/sysbuild/mcuboot/: app.overlay  prj.conf  prj_release.conf
samples/bluetooth/fast_pair/locator_tag/sysbuild/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf54l15pdk_nrf54l15_cpuapp.conf  nrf54l15pdk_nrf54l15_cpuapp.overlay  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
samples/bluetooth/peripheral_lbs/: overlay-app.conf  prj.conf
samples/bluetooth/peripheral_lbs/child_image/: mcuboot.conf
samples/bluetooth/peripheral_lbs/child_image/mcuboot/boards/: nrf52840dk_nrf52840.overlay
samples/bluetooth/peripheral_lbs/src/: main.c
samples/bluetooth/peripheral_uart/: prj.conf
samples/bluetooth/peripheral_uart/child_image/: mcuboot.conf
samples/common/mcumgr_bt_ota_dfu/: Kconfig
scripts/hid_configurator/modules/: dfu.py
subsys/bluetooth/services/fast_pair/: CMakeLists.txt  Kconfig.fast_pair  fp_registration_data.c
